--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 #generic
 
-gc_build_army_mission_title:0 "Build to Force Limit"
-gc_build_army_mission_desc:0 ""
+ gc_build_army_mission_title:0 "Build to Force Limit"
+ gc_build_army_mission_desc:0 ""
  buk_mission_conquer_central_asia_title:0 "Dominate Central Asia"
  buk_mission_conquer_central_asia_desc:0 "No Khan must be left in Central Asia to challenge our rule. Our dominance over the region must be absolute."
  buk_mission_conquer_mongolia_title:0 "Khan of Khans"
@@ -12,7 +12,6 @@ gc_build_army_mission_desc:0 ""
  buk_mission_restore_silk_road_title:0 "Restore the Silk Road"
  buk_mission_restore_silk_road_desc:0 "Ever since our nation was created, we have been adamant that we are the heir of the Khan, heir of the Steppes, and heir of the Silk Road. Our wealth and glory, our trade and armies, all of us within our nation knows this to be the truth. Sadly it has taken others a long time to realise this, to end their scoffing and for us to punish the upstarts. Through our importation of artisans, our rebuilding of critical trade infrastructure, our irrigation of the desert; we have been able to restore the Silk Road."
  gecko_emp_hab_no_one_to_threaten_us_trigger_tooltip:0 "No HRE member state:\n         §Y30§! or more provinces in §YEurope§! are owned by §Ycountry§! or its by non-tributary subjects.\n         Is NOT subject to §YAustria§!."
- gecko_mil_vatican_library_tt:0 "§YThe Vatican Library - Military Edition§! will be established in §Y[118.GetName]§!, giving the following effects:\nMilitary Technology Cost: §G-5%§!\nDiscipline: §G+5%§!"
  conquer_habsburgs_title:0 "Conquer the Habsburgs"
  conquer_habsburgs_desc:0 "We must conquer the great city of Vienna and establish our authority as Kayser of Europe."
  change_estate_land_share_5_tt: "Gain §Y5% Estate Land§! for the §YCrown§!" 
@@ -93,48 +92,6 @@ gc_build_army_mission_desc:0 ""
 
  gc_por_discovers_prestor_john_title:0 "Find Prester John"
  gc_por_discovers_prestor_john_desc:0 " "
-
-#Mysorean missions
- gc_mysore_mission_1_title:0 "Cannon Foundries"
- gc_mysore_mission_2_title:0 "Mysorean Rockets"
- gc_mysore_mission_3_title:0 "'Fireworks' Research Institute"
- gc_mysore_mission_4_title:0 "Handheld Rocketry"
- gc_mysore_mission_5_title:0 "Subdue the Marathas"
- gc_mysore_mission_6_title:0 "Advance to Kalyana"
- gc_mysore_mission_7_title:0 "Invade Maharashtra"
- gc_mysore_mission_8_title:0 "City of Victory"
- gc_mysore_mission_9_title:0 "Annihilate Vijayanagar"
- gc_mysore_mission_10_title:0 "A Window to the East"
- gc_mysore_mission_11_title:0 "Conquer Andhra"
- gc_mysore_mission_12_title:0 "The Gandaberunda Ascendant"
- gc_mysore_mission_13_title:0 "Conquer Madurai"
- gc_mysore_mission_14_title:0 "Seize Ceylon"
- gc_mysore_mission_15_title:0 "Dominate Coromandel"
- gc_mysore_mission_16_title:0 "Encourage Craftsmanship"
- gc_mysore_mission_17_title:0 "Expand Our Ports"
- gc_mysore_mission_18_title:0 "A Merchant Navy"
- gc_mysore_mission_19_title:0 "Industral Expansion"
-
- gc_mysore_mission_1_desc:0 ""
- gc_mysore_mission_2_desc:0 ""
- gc_mysore_mission_3_desc:0 ""
- gc_mysore_mission_4_desc:0 ""
- gc_mysore_mission_5_desc:0 ""
- gc_mysore_mission_6_desc:0 ""
- gc_mysore_mission_7_desc:0 ""
- gc_mysore_mission_8_desc:0 ""
- gc_mysore_mission_9_desc:0 ""
- gc_mysore_mission_10_desc:0 ""
- gc_mysore_mission_11_desc:0 ""
- gc_mysore_mission_12_desc:0 ""
- gc_mysore_mission_13_desc:0 ""
- gc_mysore_mission_14_desc:0 ""
- gc_mysore_mission_15_desc:0 ""
- gc_mysore_mission_16_desc:0 ""
- gc_mysore_mission_17_desc:0 ""
- gc_mysore_mission_18_desc:0 ""
- gc_mysore_mission_19_desc:0 ""
-
 #Ethiopian missions
 
  prestor_john_title:0 "Prestor John"
@@ -316,7 +273,7 @@ gc_hungary_mission_3_title:0 "Reform The Army"
 gc_hungary_mission_3_desc:0 ""
 
 gc_hungary_mission_4_title:0 "The Future of Hungary"
-gc_hungary_mission_4_desc:0 "§R§ Choose carefully, this will bind us to one path. §W"
+gc_hungary_mission_4_desc:0 "§RChoose carefully, this will bind us to one path.§"
 
 gc_hungary_mission_5_title:0 "Prepare the Fleet"
 gc_hungary_mission_5_desc:0 ""
