mod-to-do fixes

--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -213,3 +213,16 @@ gecko.48.d:0 "Inshallah! Thus did [Root.Monarch.GetTitle] [Root.Monarch.GetName]
 gecko.48.2.a:0 "Let us take direct control of the Emirate."
 gecko.48.2.b:0 "Administrate the Emirate from afar with limited concessions."
 gecko.48_2_tt:0 "Every owned province of §Y[TUN.GetName]§! is ceded to §Y[Root.GetName]§!"
+
+create_5_mercs_tt:0 "Hire 5 Mercenary Regiments"
+create_10_mercs_tt:0 "Hire 10 Mercenary Regiments"
+create_15_mercs_tt:0 "Hire 15 Mercenary Regiments"
+create_20_mercs_tt:0 "Hire 20 Mercenary Regiments"
+create_25_mercs_tt:0 "Hire 25 Mercenary Regiments"
+create_30_mercs_tt:0 "Hire 30 Mercenary Regiments"
+create_35_mercs_tt:0 "Hire 35 Mercenary Regiments"
+create_40_mercs_tt:0 "Hire 40 Mercenary Regiments"
+create_45_mercs_tt:0 "Hire 45 Mercenary Regiments"
+create_50_mercs_tt:0 "Hire 50 Mercenary Regiments"
+create_100_mercs_tt:0 "Hire 100 Mercenary Regiments"
+create_200_mercs_tt:0 "Hire 200 Mercenary Regiments"
