--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -159,3 +159,23 @@ gc_bulwark_of_christianity:0 "Bulwark of Christianity"
 gc_bulwark_of_christianity_desc:0 ""
 gc_hun_renaissanse_knowledge:0 "A Renaissance Prince"
 gc_hun_renaissanse_knowledge_desc:0 ""
+
+#Lombardy
+
+ LOB_ideas_start:0 "Lombard Traditions"
+ LOB_ideas_bonus:0 "Lombard Ambitions"
+ LOB_ideas:0 "Lombard Ideas"
+ LOB_restore_edict_of_milan:0 "Restore the Edict of Milan"
+ LOB_restore_edict_of_milan_desc:0 "The restoration of the crown of Lombardy will bring about tremendous beaurocratic changes and alterations in the administrative branch of the realm. Let us bring back the Edict of Milan and give a fair ay to every religion that is loyal to our banner."
+ LOB_milanese_steel:0 "Milanese Steel" 
+ LOB_milanese_steel_desc:0 "Famed steel from the best workshops and smiths of the Milanese capital will fuel and bolster the prowess of our elite troops." 
+ LOB_imperial_diplomacy:0 "Imperial Diplomacy" 
+ LOB_imperial_diplomacy_desc:0 "As a member of the Empire and a rising Italian Great Power, we shall lay claim on all our eyes can see and expand our great nation to new heights of power." 
+ LOB_defy_feudalism:0 "Defy Feudalism"
+ LOB_defy_feudalism_desc:0 "Since times of old our people have been resistant to the ideas brought to our doorstep by feudalism." 
+ LOB_italian_industrialisation:0 "Italian Industrialization" 
+ LOB_italian_industrialisation_desc:0 "Our land is rich in unprecedented amounts of all manner of natural resources. By organizing and erecting manufactories, we will be able to tame our production and capitalize on immense profits and wealth." 
+ LOB_italian_scholars:0 "Italian Scholars" 
+ LOB_italian_scholars_desc:0 "Italy is the birthplace of the Renaissance. We cannot allow ourselves to not be the world's pioneers in regards to technological innovation. Let us establish Lombardy as the house of science and advancement!" 
+ LOB_rule_mediterranean:0 "Rule the Mediterranean" 
+ LOB_rule_mediterranean_desc:0 "The Mediterranean Sea has seen millenia of combat and prospecting conquerors. Our navy will reign supreme from the coasts of the Aegean to the Genoan coasts." 
