leader pips removed and ideas tweaked

--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -179,3 +179,5 @@ gc_hun_renaissanse_knowledge_desc:0 ""
  LOB_italian_scholars_desc:0 "Italy is the birthplace of the Renaissance. We cannot allow ourselves to not be the world's pioneers in regards to technological innovation. Let us establish Lombardy as the house of science and advancement!" 
  LOB_rule_mediterranean:0 "Rule the Mediterranean" 
  LOB_rule_mediterranean_desc:0 "The Mediterranean Sea has seen millenia of combat and prospecting conquerors. Our navy will reign supreme from the coasts of the Aegean to the Genoan coasts." 
+
+ gc_mass_army:0 "Mass Army"
