--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -282,3 +282,4 @@ Standing_Army:0 "Standing Army"
  trade_hub_created_in_province_naval_supplies:0 "Production Hub"
  trade_hub_created_in_province_livestock:0 "Production Hub"
  gc_african_gold_modifier:0 "African Gold"
+ PR_manpower_edict_province_2:0 "Provincial Manpower Edict"
