--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -69,6 +69,14 @@
  X_expanded_infra_decision_title:0 "Show Provinces with Expanded Infrastructure"
  X_expanded_infra_decision_desc:0 ""
  Show_manus_title:0 "Show Manufactories without a Workshop Building"
+ PR_manpower_edict_title:0 "§RNational Manpower Edict§!"
+ PR_manpower_edict_desc:0 "Activate a manpower edict modifier in all states without an activated edict. No edicts can be applied to states with this modifier. Can be removed in 1 year."
+ PR_manpower_edict_tooltip:0 "+§Y25%§! Manpower and +§R200%§! State Maintenance in all states without an active edict"
+ PR_manpower_edict_removal_title:0 "§RDeactivate National Manpower Edict§!"
+ PR_manpower_edict_removal_desc:0 "Removes manpower edict modifier from all provinces."
+ PR_manpower_edict_cooldown:0 "Provincial Manpower Edict"
+ PR_manpower_edict_removal_tooltip:0 "Has been 1 year since activating National Manpower Edict."
+ PR_manpower_edict_province:0 "Provincial Manpower Edict"
  #gecko critial events
  GC_infantry_leader_cooldown_tooltip:0 "Infantry Leader"
  GC_cavalry_leader_cooldown_tooltip:0 "Cavalry Leader"
