Revert "custom variables removed to see if affects HJ"
This reverts commit efa0aa3488f33fd5e79159ddbbb952e448dff885.

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -404,7 +404,7 @@
  X_CRI_mission_7_tt:0 "If this mission is completed by having the required relations with §Y[TUR.GetName]§!, you lose half the money."
  X_CRI_mission_8_tt:0 "All provinces in the §YCrimea§! trade node are owned by §Y[Root.GetName]§!."
  X_CRI_mission_9_tt:0 "Every owned province in the §Y[284.GetRegionName]§! gains §G1§! Base Tax and Base Manpower.\nEvery owned province NOT of §Y[Root.Culture.GetGroupName]§! culture will become §Y[Root.Culture.GetName]§!."
- #X_CRI_mission_11_tt:0 "A §Ythird§! of the development in §Y[295.GetName]§! will be taken and randomly distributed amongst provinces owned by §Y[Root.GetName]§!.\n§Y[Root.GetName]§! gains §G+1000§!£icon_manpower£ and §Y20.0§!¤ per 1 development of §Y[295.GetName]§!."
+ X_CRI_mission_11_tt:0 "A §Ythird§! of the development in §Y[295.GetName]§! will be taken and randomly distributed amongst provinces owned by §Y[Root.GetName]§!.\n§Y[Root.GetName]§! gains §G+1000§!£icon_manpower£ and §Y20.0§!¤ per 1 development of §Y[295.GetName]§!."
  X_CRI_mission_12_tt:0 " provinces in the §Y[282.GetAreaName]§! area, §Y[1974.GetAreaName]§! area, §Y[283.GetAreaName]§! area, §Y[281.GetAreaName]§! area, §Y[280.GetAreaName]§! area, §Y[290.GetAreaName]§! area, and §Y[289.GetAreaName]§! area owned by §Y[Root.GetName]§! or its Subjects."
  X_CRI_mission_16_tt:0 " provinces in the §Y[280.GetRegionName]§! region owned by §Y[Root.GetName]§! or its Subjects."
  X_CRI_mission_13_tt:0 "   Owned by the Subject."
